--- a/Memories.html
+++ b/Memories.html
@@ -39,7 +39,7 @@
                   2020-08-31
               </div>
               <div class="ly-txt12">
-                  XXXXXXXXXXXXXXXXXXXX
+                  相识于知乎 这个网站是4.24过生日作为礼物的。然后就当作记录贴了吧
               </div>
               <div class="ly-imgbox11">
                 <img class="ly-img11" src="img/1.jpg">
@@ -49,11 +49,11 @@
 
           <div class="ly-box12">
               <div class="ly-txt13">
-                  2021-04-23
+                  2021-04-26
               </div>
               <div class="ly-txt14">
-                 <p>XX</p>
-			     <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                 <p>吵架</p>
+			     <p>这次吵架，似乎真的要结束了</p>
 			     <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
 			     <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
 				 <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
