--- a/Memories.html
+++ b/Memories.html
@@ -67,8 +67,44 @@
           <div class="ly-triangle12"></div>
       </div>
 
+      <div class="section">
+        <div class="timeline"></div>
+        <div class="timepoint11"></div>
+        <div class="ly-box11">
+            <div class="ly-txt11">
+                2020-08-31
+            </div>
+            <div class="ly-txt12">
+                相识于知乎 这个网站是4.24过生日作为礼物的。然后就当作记录贴了吧
+            </div>
+            <div class="ly-imgbox11">
+              <img class="ly-img11" src="img/1.jpg">
+            </div>
+        </div>
+        <div class="ly-triangle11"></div>
+
+        <div class="ly-box12">
+            <div class="ly-txt13">
+                2021-04-26
+            </div>
+            <div class="ly-txt14">
+               <p>吵架</p>
+         <p>这次吵架，似乎真的要结束了</p>
+         <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
+         <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
+       <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
+       <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
+       <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
+       <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
+       <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
+       <p>XXXXXXXXXXXXXXXXXXXXXXXXX</p>
+            </div>
+        </div>
+        <div class="ly-triangle12"></div>
+      </div>
+
  
-       </div>
+      </div>
   <!--动态方块-->
   <ul class="bg-bubbles">
       <li></li>
