--- a/Memories.html
+++ b/Memories.html
@@ -67,6 +67,8 @@
           <div class="ly-triangle12"></div>
       </div>
 
+
+      <!--第二屏-->
       <div class="section">
         <div class="timeline"></div>
         <div class="timepoint11"></div>
